--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.0",
     "react-scripts": "^0.9.5",
+    "react-tooltip": "^4.2.21",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
