--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "^0.9.5",
     "react-select": "^5.2.1",
     "react-tooltip": "^4.2.21",
+    "tooltip": "^1.6.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
